<resources>
    <string name="app_name">Sharecare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notification</string>
    <string name="title_share">Share</string>
    <string name="title_settings">Settings</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push_subscribe">You have subsribed successfully</string>
    <string name="email">Email/Phone Number</string>
    <string name="enter_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notification">Notification</string>
    <string name="caregiver">CareGiver</string>
    <string name="childphoto">Child Photo</string>
    <string name="select_child_photo">You can select your child photos\nup to 3 pieces</string>
    <string name="add">Add</string>
    <string name="search_user">Search Users</string>
    <string name="cancel">Cancel</string>
    <string name="place_name">Place Name</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="save">Save</string>
    <string name="place">Place</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_service">Terms and Conditions</string>
    <string name="logout">Log out</string>
    <string name="select_your_child_photo">Select your child photo</string>
    <string name="choose">Choose</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="address">Address</string>
    <string name="delete">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="denied">Denied</string>
    <string name="privacy">Privacy</string>
    <string name="appstore_link">https://</string>
    <string name="skip"><u>Skip</u></string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="history">History</string>
    <string name="event">Event</string>
    <string name="child">Child</string>
    <string name="invite">Invite</string>
    <string name="edit">Edit</string>
    <string name="invited_caregivers">Invited Care-Givers</string>
    <string name="caregivers">Care-Givers</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="send">Send</string>
</resources>
