<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="text"
        android:gravity="center_horizontal"
        android:hint="@string/place_name"/>
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="text"
        android:maxLines="5"
        android:gravity="center_horizontal"
        android:hint="@string/address"/>
    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:gravity="center_horizontal"
        android:hint="@string/latitude"/>
    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:gravity="center_horizontal"
        android:hint="@string/longitude"/>
</LinearLayout>