<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.labs.avviotech.com.sharecare.activities.CareGiverActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/light_gray"
                android:text="@string/invited_caregivers"
                android:textSize="16sp"
                android:gravity="center" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/caregiver_recycle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/light_gray"
                android:text="@string/caregivers"
                android:textSize="16sp"
                android:gravity="center" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/invited_recycle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </android.support.v7.widget.RecyclerView>
            <Button
                android:id="@+id/inviteBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/invite"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="You can add CareGivers up to 3 people"
                android:gravity="center"
                android:padding="10dp"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
